tests/compile-fail/concurrency/thread_local_static_dealloc.stderr
warning: thread support is experimental and incomplete: weak memory effects are not emulated.

error: Undefined Behavior: pointer to alloc2142 was dereferenced after this allocation got freed
  --> $DIR/thread_local_static_dealloc.rs:12:16
   |
12 |     let _val = *(dangling_ptr as *const u8); //~ ERROR dereferenced after this allocation got freed
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pointer to alloc2142 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/thread_local_static_dealloc.rs:12:16

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

